app/assets/stylesheets/posts.scss
// Place all the styles related to the posts controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

textarea {
  width: 100%;
}

#load-more-styling {
  margin-left: 350px;
  font-size: 20px;
}
.publish-date {
  font-size: smaller;
}

#post-fix {
  overflow: ellipsis;
}

